# bridge-detector-api

./: .gitignore  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.py  tox.ini  wsgi.py
bridge_detector_api/: app.py  cli.py  settings.py
bridge_detector_api/api/: rest_api.py  udp_api.py
bridge_detector_api/domain/: annotated_image_dto.py  arch_center_dto.py  depth_estimator_interface.py  detection_dto.py  detector_interface.py  image_dto.py
bridge_detector_api/infrastructure/: depth_estimator.py  yolo_detector.py
bridge_detector_api/use_cases/: annotate.py  detect_bridge.py  find_arch_center.py  get_target_point.py  img_preprocessor.py  process_frame.py  process_udp_packet.py
bridge_detector_api/utils/: is_bridge_confirmed.py  is_tracking_lost.py  model_loader.py  update_bridge_confirmation.py  update_object_confirmation.py
bridges_detection_api/: app.py  cli.py  settings.py
bridges_detection_api/api/: rest_api.py  udp_api.py
bridges_detection_api/domain/: annotated_image_dto.py  detection_result.py  detection_result_dto.py  image_dto.py
bridges_detection_api/infrastructure/: img_processing.py
bridges_detection_api/rest/: detect.py  detect_api.py
bridges_detection_api/use_cases/: annotate.py  detect.py  preprocess_img.py  preprocess_img_dto.py
bridges_detection_api/utils/: model_loader.py
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
drone_navigation_api/: __init__.py  app.py  settings.py
drone_navigation_api/api/: udp_api.py
drone_navigation_api/domain/: arch_center_dto.py
drone_navigation_api/infrastructure/: depth_estimator.py
drone_navigation_api/utils/: model_loader.py  reset_confirmation_state.py
requirements/: dev.txt  test.txt
tests/: __init__.py  conftest.py  test_app.py  test_bridges_detection_api.py
tests/api/: test_rest_api.py
tests/infrastructure/: test_img_processing.py
tests/use_cases/: test_annotate.py  test_detect.py  test_preprocess_img_dto.py  test_process_udp_packet.py
tests/utils/: test_img_processing.py
